update up to chapter 8

--- a/_book-wordpress-to-jekyll/1.md
+++ b/_book-wordpress-to-jekyll/1.md
@@ -2,4 +2,4 @@
 title: About the Book
 ---
 
-This ebook is avaiblable online at no cost. If you want to pledgle a small amount of money to support its creation you can purchase the ebook version. Links are at the bottom of the page.
+This ebook is available online at no cost. If you want to pledge a small amount of money to support its creation you can purchase the ebook version. Links are at the bottom of the page.
