--- a/_book-wordpress-to-jekyll/3.md
+++ b/_book-wordpress-to-jekyll/3.md
@@ -3,7 +3,9 @@ title: How to get this book
 ---
 
 
-You can read the full book online at no cost here. You can buy the ebook version for your Kindle, iPad or any ebook reader, tablet, PC or Mac on Gumroad or Amazon.
+You can read the full book online at no cost here.
+
+You can buy the ebook version for your Kindle, iPad or any ebook reader, tablet, PC or Mac on Gumroad or Amazon.
 
 - [Gumroad][24]
 - [Amazon][25]
