--- a/_book-wordpress-to-jekyll/39.md
+++ b/_book-wordpress-to-jekyll/39.md
@@ -12,3 +12,8 @@ In the beginning I've listed Netflify as an alternative, but you can also use bo
 Netlify free tier is generous, but for most advanced use you will need to use the paid plan.
 
 [I'm NOT sponsored by Netflify, I just like what they provide.]
+
+
+--
+
+Nowadays you can use [Netlify](https://www.netlify.com) to automatically run a "cloud function" after each deploy to generate your website and deploy it so it's less of a hassle, but it still not straightforward to set up. I've tried Netlify with both Jekyll and Gatsby and it works well.
