--- a/_book-wordpress-to-jekyll/4.md
+++ b/_book-wordpress-to-jekyll/4.md
@@ -2,6 +2,8 @@
 title: Preface
 ---
 
+When I embarked on this journey I did not find a clear book with step by step instructions on what to do. The basics of the migration process are pretty straightforward for someone who is used to this sort of things, but for someone new the can be daunting. It doesn't need to be. This book will teach you how to migrate your WordPress blog (or any other kind of blog) to a static website step by step.
+
 This ebook is going to focus on how to migrate an existing blog or website from WordPress to Jekyll (and specifically a Jekyll website hosted on Github Pages). You can adapt it to other input sources instead of WordPress such as Movable Type, or CutePHP relatively easily assuming you can get an export into markdown. The step by step instructions will not be exactly the same although they can be used as reasonable guidelines.
 
 The same applies if you do not plan to use Github Pages as your hosting service of choice. You can just as easily use Netlify or Gitlab, but as before the step by step instructions are for Github Pages only since it's the most popular service and the one I'm personally using.
