--- a/_book-wordpress-to-jekyll/7.md
+++ b/_book-wordpress-to-jekyll/7.md
@@ -2,22 +2,20 @@
 title: The Various Options For Static Websites
 ---
 
-Since I've been interested in doing this for years, I've read about and tried locally many markdown static website generators.
+The last few years has seen an explosion in static website generators. The end result is the same, but they all are unique and different in how they get there.
 
-This is a comprehensive list of everything I've tried:
+This is a comprehensive list of everything I've tried, ordered by most recommended to least:
 
 - [Jekyll](https://jekyllrb.com/) - The standard that started the whole movement of static markdown websites.
-- [Octopress](http://octopress.org) - Opinionated customization of Jekyll built for blogging.
-- [Second Crack](https://github.com/marcoarment/secondcrack) - A hobby project of a developer I follow. It works well, but it should not be used for production use since it doesn't really have a community behind it.
+- [Gatsby](https://www.gatsbyjs.org) - Based on React. Great if you're already using React on other project or if you'd like to learn it.
 - [Hugo](https://gohugo.io/) - Really fast, but lacks plugins and extensibility.
 - [Ghost](https://ghost.org/) - Great look out of the box, needs a VPS.
+- [Octopress](http://octopress.org) - Opinionated customization of Jekyll built for blogging.
 - [Brunch](http://brunch.io/)
 - [Hexo](https://hexo.io/)
-- [Gatsby](https://www.gatsbyjs.org) - Based on React. Great if you're already using React on other project or if you'd like to learn it.
 - [Gitbook](https://www.gitbook.com) - Super simple to set up and use, but limited in extensibility and customization. Great for documentation, books, and tutorials.
+- [Second Crack](https://github.com/marcoarment/secondcrack) - A hobby project of a developer I follow. It works well, but it should not be used for production use since it doesn't really have a community behind it.
 
-I'm sure I missed many of them, but I feel like these ones are the most used and/or famous. Of all of these, I particularly liked Gatsby, Jekyll, and Ghost.
+I'm sure I missed many of them, but I feel like these ones are the most popular or famous.
 
-A few of these solutions (Ghost and Second Crack for example) need either a VPS to build the website or a manual deployment process where you built the website yourself and deploy the generated website to your server.
-
-Nowadays you can use [Netlify](https://www.netlify.com) to automatically run a "cloud function" after each deploy to generate your website and deploy it so it's less of a hassle, but it still not straightforward to set up. I've tried Netlify with both Jekyll and Gatsby and it works well.
+A few of these solutions (Ghost and Second Crack for example) need either a VPS (Virtual Private Server) to build the website or a manual deployment process where you build the website yourself and deploy the generated website to your server. This is less than ideal. The former has some merits, you control the whole stack so you can customize the server for your needs, on top of that you could reuse the machine for other tasks if you need to since a static website it is not a big burden on a server so a lot of its resources would be free to do something else unless you have a LOT of traffic. The latter is a real problem. The process of publishing something new should be as straight-forward as possible so that there is little friction between writing and pressing publish. Since it is already going to be complicated for someone with little technical background adding more steps to the process is going to turn a lot of people off when on WordPress you simply open the new post page and write.
