--- a/_book-wordpress-to-jekyll/8.md
+++ b/_book-wordpress-to-jekyll/8.md
@@ -2,11 +2,12 @@
 title: Why Choosing Jekyll
 ---
 
+The top 4 entries in the list are great choices and you can't go wrong with any of them.
 
 In the end, I chose Jekyll for multiple reasons:
 
 1. Community
-   It's the framework with wider adoption, a history of consistent updates over a decade (it was launched in 2008) and most activity on Github. It might be that in the future newer frameworks will overtake it and if that's the case it might be worth migrating, but for now, Jekyll is still the king.
+   It's the framework with the wider adoption. A history of consistent updates over a decade (it was launched in 2008) and most activity on Github. It might be that in the future newer frameworks will overtake it and if that's the case it might be worth migrating, but for now, Jekyll is still the king.
 
 2. Automatic integration with Github
    Github Pages runs on Jekyll with almost no setup. I could simply host my website there and have all the goodies of Github included for free. Otherwise would have been forced to use two different services instead of one: Github to host the code and Netlify to host the site. I tend to avoid that whenever possible.
