--- a/_book-wordpress-to-jekyll/5.md
+++ b/_book-wordpress-to-jekyll/5.md
@@ -4,10 +4,10 @@ title: Introduction
 
 This book includes a deep dive on what you need to do if you want to embark in the same journey I overtook by migrating my website from WordPress to Jekyll.
 
-It requires some technical knowledge, but it is not unachievable. You need to be familiar with the command line and know the basics of HTML, CSS, and JS. It would also be nice, but not necessary to know something about GIT. If you are not a technical person and you're looking for a super easy solution to just publish content online this is not for you. You can keep using WordPress or something like [Squarespace][12], a static website generator requires a minimum of technical knowledge.
+It requires some technical knowledge, but it is not unachievable. You need to be familiar with the command line and know the basics of HTML, CSS, and JS. It would also be nice, but not necessary to know something about version control, GIT in the specific. If you are not a technical person and you're looking for a super easy solution to just publish content online this is not for you. You can keep using WordPress or something like Squarespace. A static website generator requires a minimum of technical knowledge. If you do not possess it, but you are a quick learning you might still make it work, but it is going to be hard and require some dedication.
 
-I had been thinking about doing it for almost 5 years before actually going through with it. I had always been scared of totally breaking the website by migrating it off something well established as WordPress and that I'd been using for years at that point to something less "mainstream". My process looked something like this: I would write each post in markdown in Byword (both on iOS and Mac OSX), convert it to HTML and paste it manually into the WordPress textbox. Doing all of this each time felt a bit too much friction. It wasn't broke, but it surely could have been improved.
+I had been thinking about doing it for almost 5 years before actually going through with it. I had always been scared of totally breaking the website by migrating it off from something well established like WordPress and that I'd been using with no regrets for many years at that point to something less "mainstream".
 
-Early on I decided that I would want to go for a static site. The content of the site would not change much and it surely wasn't dynamic. I could easily rebuild all the static pages when I published an article.
+My process looked something like this: I would write each post in markdown in Byword (both on iOS and Mac OSX), convert it to HTML and paste it manually into the WordPress textbox. Doing all of this each time felt a bit too much friction. It wasn't broken, but it surely could have been improved. Avoiding writing everything multiple times was going to be a great first step.
 
-[12]: https://www.squarespace.com/
+Early on I decided that I would want to go for a static site. The content of the site would not change too often and it surely wasn't dynamic. All posts once written are the same, the might get edited, but they're surely not going to change dynamically as people are browsing in response to their actions. I could easily rebuild all the static pages of the website when I published an article. This would allow me to need a really minimal server infrastructure since in the end it is only rendering html files and servers are blazing fast in doing that (increasing load time and responsiveness), but also there are many solutions to host static websites for free so I would not necessarely need a server at all. I could just use one from the many free options. The major ones being GitHub (the one we're going to cover in this book), Gitlab and Netlify.
