--- a/_book-wordpress-to-jekyll/6.md
+++ b/_book-wordpress-to-jekyll/6.md
@@ -2,4 +2,6 @@
 title: Requirements
 ---
 
-To be able to follow along you need to be familar with the command line and have basic html and css knowledge. While the latter can be optional (but strongly recommended) the former is necessary since most of your daily taks such as updating the website require the command line.
+To be able to follow along you need to be familiar with the command line and have basic html and css knowledge. While the latter can be optional (but strongly recommended) the former is necessary since most of your daily tasks such as updating the website require the command line.
+
+You can still follow this book if you have really basic command line experience, but is it going to be harder and it is going to require some more dedication on your part, but it is achivable.
