--- a/_posts/2012-04-17-ipa.markdown
+++ b/_posts/2012-04-17-ipa.markdown
@@ -1,17 +1,17 @@
 ---
 layout: post
-title: Ipa
+title: Ipa - Twitter New Patent Agreement
 date: 2012-04-17 18:43:50.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
-[Twitter has just announced IPA][0], how patents should be.  
-It's a huge step forward, but they're also taking a great risk if no one would follow.  
+[Twitter has just announced IPA][0], how patents should be.
+It's a huge step forward, but they're also taking a great risk if no one would follow.
 Though I do hope that every other company could be as wise as Twitter.
 
 
