--- a/_posts/2012-04-09-cesspool.markdown
+++ b/_posts/2012-04-09-cesspool.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Cesspool
+title: Rim Defines The Play Store As Cesspool
 date: 2012-04-09 17:12:27.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
 A wrong [decision][0], but a truthful [quote][1]:
