--- a/_posts/2012-04-25-2-hours.markdown
+++ b/_posts/2012-04-25-2-hours.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 2 hours
+title: WWDC 2012 Sold Out In 2 hours
 date: 2012-04-25 19:19:49.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
 [WWDC][0] sold out in just 2 hours.
