--- a/_posts/2012-06-02-boredom.markdown
+++ b/_posts/2012-06-02-boredom.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "Boredom"
+title: Boredom - Why Being Bored Is Not A Bad Thing
 date: 2012-06-02 17:05:02.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
 Steve Jobs:
