--- a/_posts/2012-06-23-nda.markdown
+++ b/_posts/2012-06-23-nda.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "NDA"
+title: Bloggers Violating Apple NDA For Profits
 date: 2012-06-23 12:55:47.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
 Bloggers are so sold to pageviews that they even violate an NDA Agreement with Apple to gain more.
