--- a/_posts/2012-07-25-pandora.markdown
+++ b/_posts/2012-07-25-pandora.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "Pandora"
+title: Pandora - New Frontier In Space Exploration
 date: 2012-07-25 17:21:38.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
 [It seems like it's getting more real.][0]
