--- a/_posts/2012-08-15-air-music.markdown
+++ b/_posts/2012-08-15-air-music.markdown
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: "Air Music"
+title: Air Music - Play Music With Gestures
 date: 2012-08-15 15:01:20.000000000 +02:00
 type: post
 published: true
 status: publish
-categories:
-- Tech
-author: Valentino Urbano 
+categories: [Tech]
+author: Valentino Urbano
 ---
 
 Two revolutions for musicians:
