--- a/_posts/2012-09-11-venus.markdown
+++ b/_posts/2012-09-11-venus.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "Venus"
+title: In Depth Analysis of Venus
 date: 2012-09-11 20:35:05.000000000 +02:00
 type: post
 published: true
 status: publish
 categories:
 - Tech
-author: Valentino Urbano 
+author: Valentino Urbano
 ---
 
 I bet you didn't know anything [about Venus][0] before today, or at least not so deeper.
