9 to 12 light changes

--- a/_book-wordpress-to-jekyll/11.md
+++ b/_book-wordpress-to-jekyll/11.md
@@ -2,13 +2,13 @@
 title: Install Jekyll
 ---
 
-Open terminal again and run:
+To install Jekyll open the Terminal and run:
 `gem install jekyll`
 
-Additionally, install `bundler`, we'll need it later:
+Additionally, install `bundler`, since we will need it later:
 `gem install bundler`
 
-During the installation it might happen that nokogiri fails to install. If it fails, try installing it without the native extensions. Before trying to install jekyll again run:
+During the installation it might happen that nokogiri fails to install. If it fails, try installing it without its native extensions by running:
 `gem install nokogiri -- --use-system-libraries --with-xml2-include=/usr/include/libxml2 --with-xml2-lib=/usr/lib`
 If it fails again try following [this thread][2] for troubleshooting steps.
 
