--- a/_book-wordpress-to-jekyll/12.md
+++ b/_book-wordpress-to-jekyll/12.md
@@ -2,7 +2,13 @@
 title: Setting up your GitHub pages repository
 ---
 
-Login into Github and [create a new public repository](https://github.com/new) [Unless you plan on forking a theme], choose a name, ignoring the `Need inspiration? How about verbose-octo-waffle.` proposed by Github. I'm sure you can come up with a better name yourself.
+Now that we have installed Jekyll locally we need to start thinking about where to host our website. There are many alternative services that offer free static website hosting, the major ones being Github and Gitlab. In this book we will cover GitHub since it's the major one and most used, but the process for Gitlab is fairly similar.
+
+Login into Github or create a new account.
+
+[Create a new public repository](https://github.com/new) to host the files for the website.
+
+[Unless you plan on forking a theme], choose a name, ignoring the `Need inspiration? How about verbose-octo-waffle.` proposed by Github. I'm sure you can come up with a better name than that...
 
 Before doing anything else you need to think about which URL you want to use:
 Decide if your website is going to be at `http://USERNAME.github.io/` of at `http://USERNAME.github.io/REPOSITORY_NAME`. For now, I plan to have my website at `http://valeIT.github.io/` of course if you plan to redirect to it from your main website URL it is not really relevant. In my case, http://www.valentinourbano.com will bring you there so it's not really important where it is located.
