--- a/_book-wordpress-to-jekyll/10.md
+++ b/_book-wordpress-to-jekyll/10.md
@@ -2,13 +2,20 @@
 title: Install RVM and Ruby
 ---
 
-Before trying to install any dev tools on a Mac it is a good idea to install the Xcode command line helper from Apple. Open Terminal.app and run `sudo xcode-select --install`. It will ask for your Mac's password and install the developer tools.
+Before installing Jekyll itself we still need to install a few dependencies. If you're a developer you might already have them installed, if so you can skip this section.
 
-The version of Ruby that comes installed with OSX is really outdated and it shouldn't be used — ever.
-Open Terminal.app again and install RVM (a version manager for Ruby that lets you install and switch between different versions of Ruby with ease), and the latest version of Ruby:
+**Apple Developer Tools**
+
+Before trying to install any development tool on a Mac it is a good idea to install the Xcode command line tools from Apple. Open Terminal.app and run `sudo xcode-select --install`. It will ask for your Mac's password and install the developer tools if necessary.
+
+**Ruby**
+
+The version of Ruby that comes installed with OSX is really outdated and it shouldn't be ever used.
+
+Open Terminal.app again and install RVM (a version manager for Ruby that lets you install and switch between different versions of Ruby with ease), and alongside install the latest version of Ruby:
 `\curl -sSL https://get.rvm.io | bash -s stable --ruby`
 
 After that is good practice to update your gems (the ruby 'libraries' you have installed), run:
 `gem update`
 
-After all of that is done it is time to install Jekyll itself.
+It is now time to install Jekyll.
