--- a/_book-wordpress-to-jekyll/9.md
+++ b/_book-wordpress-to-jekyll/9.md
@@ -3,15 +3,19 @@ title: Jekyll Introduction
 ---
 
 
-Jekyll is the most widely used Static Site Generator. It is written in ruby and it generates static pages from your files in markdown. You can fully control the styling and plugins of your website, for example, I added a script to show the number of words in an article and another one to show an estimate of the reading time.
+Jekyll is the most widely used Static Site Generator. It is written in ruby and it generates static pages from your files. You write all the content in plain markdown.
+
+You can fully control the styling and plugins of your website. For example, I added a script to show the number of words in an article and another one to show an estimate of the reading time.
 
 I love this part of Jekyll's `README`:
 
 > Put simply, Jekyll gets out of your way and allows you to concentrate on what truly matters: your content.
 
-Truth be told, most static generators are like that. Customizable if needed, but they don't force you to, you can simply choose one of the multiple themes and get started.
+Truth be told, most static generators are like that. Customizable if needed, but they don't force you into it, you can simply pick one of the multiple available themes and get started on your content.
 
-To start we will install a local development environment on your Mac so that you can test your website design and content without actually publishing it. The neat thing is that once the website is ready you can use it to preview new articles before syncing the changes to the server to have a real view on its look.
+To start we will install a local development environment on your Mac so that you can test your website design and content without actually publishing it online.
+
+Once your website is ready you can use this same workflow to preview any new article before syncing the changes to the server to have a real preview.
 
 _This article will focus on Mac OSX since it's the OS that I'm using. If you need to install Jekyll on a different OS [the official website][1] has a guide on how to do it._
 
