light edits + add automation section

--- a/_book-wordpress-to-jekyll/12.md
+++ b/_book-wordpress-to-jekyll/12.md
@@ -2,11 +2,11 @@
 title: Setting up your GitHub pages repository
 ---
 
-Now that we have installed Jekyll locally we need to start thinking about where to host our website. There are many alternative services that offer free static website hosting, the major ones being Github and Gitlab. In this book we will cover GitHub since it's the major one and most used, but the process for Gitlab is fairly similar.
+Now that we have installed Jekyll locally we need to start thinking about where to host our website. There are many alternative services that offer free static website hosting, the major ones being Github and Gitlab. In this book we will cover GitHub since it's the most popular and used of the two. The process for Gitlab is a bit more convoluted, but [relatively similar][1].
 
-Login into Github or create a new account.
+The first step is to create a new Github account or login into an existing one.
 
-[Create a new public repository](https://github.com/new) to host the files for the website.
+Once that's done you can go ahead and [create a new public repository](https://github.com/new) to host the files and content of the website. You can choose if you want it to be accessible by everyone (public) or only by you (private). Private repositories are way more limited in the kind of automatic actions and bots they support. More advanced part of this book will only be available for public repositories.
 
 [Unless you plan on forking a theme], choose a name, ignoring the `Need inspiration? How about verbose-octo-waffle.` proposed by Github. I'm sure you can come up with a better name than that...
 
@@ -20,3 +20,5 @@ Create a new repository there, or just fork whatever them you plan on using ([I'
 _Please note that this Article is mainly based on forking the mediator theme so that's the easiest way to follow the guide if you're new to Jekyll._
 
 If you forked a theme you can skip the next chapter and [go to Forked Mediator](#forked-a-theme) to set up your theme. Otherwise, we are going to continue setting up a new repository.
+
+[1]: https://docs.gitlab.com/ee/user/project/pages/
