--- a/_book-wordpress-to-jekyll/40.md
+++ b/_book-wordpress-to-jekyll/40.md
@@ -1,7 +1,26 @@
 ---
-title: Conclusion
+title: Extra - Beginner Github Automation
 ---
 
-You now have a fully functioning website with a custom domain name hosted on Github Pages. With a simple commit (and push) you can add content. Additionally, you're going to have all the changes tracked so you can easily revert back in case of mistakes or keep track of when you made a particular change.
+There are a few bots that are useful and will take away some struggle with managing the low level details of the website that we don't care about. These bots are free and available for both open source (public) and private repositories.
 
-On top of that if you've also configured Cloudflare and Netlify you added the ability of having a live preview of your website before publishing each change, strong DOS protection, realistic (and privacy friendly) analytics, and free HTTPS.
+Before starting we need to get familiar with Pull Requests. These bots will not automatically commit a new update to your website, but will open a pull request: A request for a change to be integrated into your website. It is your responsibility to go ahead and merge it into the website by clicking merge.
+
+# Adding a bot
+
+To add a bot you open the link or search the Github marketplace for it and authorize access to your account. Most of the time you will be able to select the name of the repository to limit access to as well. Once added they usually don't need any additional configuration, but if they do I will point it out.
+
+# Dependency Management
+
+This bot will take care of updating the software that runs your website automatically.
+
+[Dependabot][1]
+
+# Image Optimization
+
+Cropping and optimizing the images we upload for the web takes a lot of time, this bot will check all the images on your website and compress them without losing quality.
+
+[Imgbot][2]
+
+[1]: https://app.dependabot.com/auth/sign-up
+[2]: https://github.com/marketplace/imgbot
