--- a/_posts/2019-11-08-coffee.md
+++ b/_posts/2019-11-08-coffee.md
@@ -11,9 +11,11 @@ image2:
 author: Valentino Urbano
 ---
 
-There are a lot of different kind of coffees, some are good, others just so so, and then there are the truly awful ones that make you wonder if whoever produced it even knew what coffee is.
+There are a lot of different kind of coffee, some are good, others just so so, and then there are the truly awful ones that make you wonder if whoever produced it even knew what coffee is.
 
-Being italian I have a pretty high quality standard for coffee so it has always been hard to find one that I really liked abroad. Fortunately in most Europe you can find Italian branded coffee, it usually comes with a premium, but it is worth the difference in price.
+Being Italian I have a pretty high quality standard for coffee so it has always been hard to find one that I really liked abroad. Fortunately in most Europe you can find Italian branded coffee, it usually comes with a premium, but it is worth the difference in price.
+
+The worst coffee I've ever had was in Portugal. It was a coffee with a chocolate aftertaste. You would expect it to be good, but it was not. It did not taste like a chocolate and it didn't taste like a coffee, it was just a total mistake. The second worst coffee is obviously the american coffee, no taste, just caffeine.
 
 If that's not an option the last line of defence is adding milk. It makes even terrible coffee way more bearable. It doesn't make it good, but it just make it so I can drink it without being disgusted by it too much.
 
