--- a/_book-wordpress-to-jekyll/13.md
+++ b/_book-wordpress-to-jekyll/13.md
@@ -2,9 +2,13 @@
 title: New Repository
 ---
 
-If you have a new repository running `jekyll new` will automatically generate a base template for you to get started[^3]. Note that this will create a basic site (best suited for blogs), if you have different needs you should use a [theme](#forked-a-theme) For now leave everything as it is and [skip](#testing-the-website) the next section.
+Iin the previous chapter we have created a new empty repository. We can now open the Terminal, navigate to it and run `jekyll new`. This will automatically generate a base website using the default Jekyll template for you to get started quickly[^3].
 
-- Open Terminal.app app and run `jekyll new`.
-- Open your browser of choice to http://localhost:8000
+Note that this will create a basic site which is best suited for blogs. If you have different needs you should use a [custom theme](#forked-a-theme). For now leave everything as it is, skip the next section which talks about how to use a custom theme instead, and go directly to checking it out.
+
+- Open Terminal.app app and run `jekyll serve`.
+- Open your browser of choice to http://localhost:8000 and take a look at the website.
+
+We will go more in-depth into it in the chapter [test your website](#testing-the-website).
 
 [^3]: If you're confused on what to do [follow the points in Forked a theme instead](#forked-a-theme).
