--- a/_book-wordpress-to-jekyll/12.md
+++ b/_book-wordpress-to-jekyll/12.md
@@ -2,7 +2,9 @@
 title: Setting up your GitHub pages repository
 ---
 
-Now that we have installed Jekyll locally we need to start thinking about where to host our website. There are many alternative services that offer free static website hosting, the major ones being Github and Gitlab. In this book we will cover GitHub since it's the most popular and used of the two. The process for Gitlab is a bit more convoluted, but [relatively similar][1].
+Now that we have installed Jekyll locally we need to start thinking about where to host our website. There are many alternative services that offer free or paid static website hosting. We are going to focus on the free ones. The two major ones being Github and Gitlab.
+
+In this book we will cover GitHub since it's the most popular and used of the two. The process for Gitlab is a bit more convoluted, but it is [relatively similar][1].
 
 The first step is to create a new Github account or login into an existing one.
 
