--- a/_book-wordpress-to-jekyll/14.md
+++ b/_book-wordpress-to-jekyll/14.md
@@ -2,15 +2,17 @@
 title: Forked a theme
 ---
 
-If you've forked a theme instead, you should follow the theme's installation instructions. For example, using the [mediator](https://github.com/dirkfabisch/mediator) theme the process is as follows:
+If you've forked a theme instead, you should follow the theme's installation instructions. They are all fairly similar, but the may slightly vary for each time so the best thing to do is to directly go to the page where you downloaded the theme and follow the step by step guide for it.
 
-- [Fork the repo](https://github.com/dirkfabisch/mediator)
-- Clone it to your local machine: `git clone https://github.com/USERNAME/mediator` [^4]
-- Open Terminal.app and navigate (`cd`) to the folder: `cd mediator`
-- From the Terminal run `bundle install`
-- Run `jekyll serve` to generate your website
-- Open your browser of choice to http://localhost:8000
+For example, using the [mediator](https://github.com/dirkfabisch/mediator) theme the process is as follows:
 
-"Mediator" is a medium-like theme and it's the theme that I'm currently using for my personal website. If that's not the theme for you, a good source is [Jekyll Themes](https://jekyllthemes.io/).
+- [Fork the repository](https://github.com/dirkfabisch/mediator) by clicking fork at the top right, this will create your own copy of the repository
+- Download it (Clone) to your local machine by opening the Terminal and running `git clone https://github.com/USERNAME/mediator`, subsistuting `USERNAME` with your Github username.[^4]
+- Again in Terminal.app and navigate (`cd`) inside the folder: `cd mediator`
+- Run `bundle install` to install the dependencies
+- Run `jekyll serve` to generate the website locally. This will be very useful to test how it looks before publishing it.
+- Open your browser of choice to http://localhost:8000 to see it live, running on your machine.
+
+"Mediator" is a medium-like theme and it's the theme that I'm currently using for my personal website. If that's not the theme for you, a good source for additional free themes is [Jekyll Themes](https://jekyllthemes.io/).
 
 [^4]: If it asks if you want to add the Github IP to known hosts say yes.
