--- a/_book-wordpress-to-jekyll/15.md
+++ b/_book-wordpress-to-jekyll/15.md
@@ -2,37 +2,43 @@
 title: Jekyll File Structure
 ---
 
-The structure of your new website is not super complicated. Everything that starts with an underscore "\_" is your source that will generate the website. Once generated the site will live in the "\_site" folder.
+The structure of a Jekyll based website is not super complicated.
 
-- \_config.yml
+The basic rule is that everything starting with an underscore "\_" is the source. It will be used to generate the website.
 
-This file stores the configuration of your website like the URL, the name, setup defaults and so on.
+Once generated the site will live in the "\_site" folder, that's where you will find all the generated HTML files, alongside css, js and the rest.
 
-- \_data
+Let's now go more in depth on each major file and folder and its content:
 
-This folder includes files used to get data that will be accessible from anywhere else on the site. For example you could have a .yaml file with a list of your projects for a portfolio or a list of links.
+- `_config.yml`
 
-- \_drafts
+This file stores the main configuration for your website like URL, title, description, analytics, default values and so on. It is also used to set up features like pagination and collections.
 
-The folder to store the drafts of your articles that will not be published on the web until the get moved to the \_posts folder.
+- `_data`
 
-- \_includes
+This folder includes raw files that are used by Jekyll to get data easily. This files are available anywhere else on the site so they can be used to store dynamic data so that pages are generated off it. For example you could have a .yaml file with a list of your projects for a portfolio or a list of links and each time you edit the file and rebuild the website the portfolio page will get updated with the new projects without you having to manually create or update a .md page file for it.
 
-Files here can be included from anywhere else on the website so you usually put here your headers and footers, but also utilities.
+- `_drafts`
 
-- \_layouts
+The folder to store the drafts of your articles that will not be published on the website until they get moved to the `_posts` folder. Remember that if your repository is public this folder will be public as well if you add it to the repository.
 
-Here are stored templates for your pages. You could have one template for your blog posts and another template for your pages.
+- `_includes`
 
-- \_posts
+The files contained here can be used as building blocs for the website. It is generally a good place to store reusable components like headers, footers, and navigation. But it can also be used for utilities.
 
-It includes all your published blog posts. Keep in mind that the filename should follow this convention: YEAR-MONTH-DAY-title.extension
+- `_layouts`
 
-- \_sass
+The files here are templates for your different pages. For example it is the norm to have one template for the blog posts and another template for the pages since the content and how you want to display it will differ for those two formats. Nothis forbits you to create more for some specific content though.
+
+- `_posts`
+
+It includes all your published blog posts. Keep in mind that the filename should follow this convention: YEAR-MONTH-DAY-title.extension and the extension should be either .md or .markdown to be parsed as markdown and correctly converted to HTML.
+
+- `_sass`
 
 It includes all of your CSS that will be compacted into one output file during the build.
 
-- \_site
+- `_site`
 
 Once built your site will be generated inside this folder.
 
