--- a/_posts/2019-11-22-one-year.md
+++ b/_posts/2019-11-22-one-year.md
@@ -13,9 +13,9 @@ author: Valentino Urbano
 
 365 days have passed since I started writing one post every day.
 
-It is impressive to see how it all compounds. Most of the visists to my websites are from posts written this year even though most of them are pretty short.
+It is impressive to see how it all compounds. Most of the visits to my websites are from posts written this year even though most of them are pretty short.
 
-I had to choose between consistency and writing long form and I chose the former. Writing long form articles gives way better results with search engines and thanks to that a lot more traffic, but that doesn't mean that short content is bad. It will just give you less views coming from Google. 
+I had to choose between consistency and writing long form and I chose the former. Writing long form articles gives way better results with search engines and thanks to that a lot more traffic, but that doesn't mean that short content is bad. It will just give you less views coming from Google.
 
 That said, I've always been a believer that if you're writing to get views or rank on Google you are better doing something else with your time. If you write content in your day job as a way to get leads it is another story, but if you're writing as an hobby the main goal should be the craft itself and improving your skills. The rest should come naturally on its know if it does and it should not be the goal.
 
@@ -23,7 +23,11 @@ That said, I've always been a believer that if you're writing to get views or ra
 
 You don't notice it a lot on a day to day basis, but when you look back after 6 months to a year you will see a huge difference on how your approached things back then and how you approach them now. This is true not only for writing, but more in general.
 
-## Writing About Writing[^1]
+## Consistency
+
+There has been days when I was sick, days when I was abroad, days when I was driving 12 hours straight (do not recommend), days with no connectivity[^1]
+
+## Writing About Writing[^2]
 
 I wanted to take a few moments to list what I think are the best posts about writing that I've written this year. They are not a lot since the bulk of my articles are about tech and programming, but they are not so few either:
 
@@ -63,7 +67,8 @@ How I write down ideas has changed slightly. I used to do it on the notes app on
 
 I have no intention on stopping. The day may come, but for now it is far in the horizon.
 
-[^1]: So Meta...
+[^1]: That's the reason why I lost the streak on 200WaD.
+[^2]: So Meta...
 
 [1]: {% post_url 2018-11-24-writingideas %}
 [2]: {% post_url 2018-12-05-two-weeks-of-writing %}
@@ -75,7 +80,7 @@ I have no intention on stopping. The day may come, but for now it is far in the 
 [8]: {% post_url 2019-09-19-Scripting%20and%20Writing %}
 [9]: {% post_url 2019-10-06-VSCode%20For%20Writing %}
 [10]: {% post_url 2019-10-06-Introducing-Teria %}
-[11]: 
+[11]:
 [12]: {% post_url 2019-10-26-It-s-Release-Day %}
 [13]: https://apps.apple.com/ae/app/teria-write-notes-quickly/id1475731987
 [14]: https://play.google.com/store/apps/details?id=com.valentinourbano.markdowneditor
