--- a/_book-wordpress-to-jekyll/13.md
+++ b/_book-wordpress-to-jekyll/13.md
@@ -2,7 +2,7 @@
 title: New Repository
 ---
 
-Iin the previous chapter we have created a new empty repository. We can now open the Terminal, navigate to it and run `jekyll new`. This will automatically generate a base website using the default Jekyll template for you to get started quickly[^3].
+In the previous chapter we have created a new empty repository on Github and synced it to our machine. We can now open the Terminal, navigate to it and run `jekyll new`. This will automatically generate a base website using the default Jekyll template for you to get started quickly[^3].
 
 Note that this will create a basic site which is best suited for blogs. If you have different needs you should use a [custom theme](#forked-a-theme). For now leave everything as it is, skip the next section which talks about how to use a custom theme instead, and go directly to checking it out.
 
