--- a/_book-wordpress-to-jekyll/15.md
+++ b/_book-wordpress-to-jekyll/15.md
@@ -42,6 +42,6 @@ It includes all of your CSS that will be compacted into one output file during t
 
 Once built your site will be generated inside this folder.
 
-- other folders
+- Any other folder
 
-Any other folder will be copied to your website, so you could have a folder called "folder1" that point to mysite.com/folder1 and so on.
+Any other folder will be copied directly to the output of your website. If you have a folder called "folder1" it will point to mysite.com/folder1 and so on. These kind of folders should NOT start with underscore though.
