--- a/_book-wordpress-to-jekyll/16.md
+++ b/_book-wordpress-to-jekyll/16.md
@@ -2,26 +2,26 @@
 title: Setting up your machine for SSH access to Github
 ---
 
-[**If you've already set up your machine for SSH access, or you're used in doing it, freely skip to the next section**](#testing-the-website)
+[**If you've already set up your machine for SSH access to Github, or if you're used doing it, freely skip to the next section**](#testing-the-website) otherwise continue as we will generate a key and add it to Github.
 
-First, you will need to make sure that `openssl` is installed. If not you can install it using [homebrew](https://brew.sh/): `brew install openssl`.
+First, you need to make sure that `openssl` is installed on your machine. If not, or if you're not sure, you can install it using [homebrew](https://brew.sh/) by running `brew install openssl`. If it's already installed the command will simply print that that dependency is already installed on your system.
 
 #### Generate a key
 
-[If you are on windows you can read my guide on how to set up an SSH key on Windows][3].
+[If you are on windows you can read the guide on how to set up an SSH key on Windows][3].
 
-Open up your terminal and [generate the key][4] by running (taking care of adding your email instead of the example one):
+Open the terminal and run `ssh-keygen -t rsa -b 4096 -C "email@email.com"` to [generate the key][4]. Take care of substituting your email instead of the example one.
 
-`ssh-keygen -t rsa -b 4096 -C "email@email.com"`
+This will start the generation process. The prompt is going to ask for a filename, you can leave the default or choose a custom one. If you don't have a need for a custom name I recommend leaving it as the default since a lot of software will assume you have at least a key with the default name.
 
-You can leave the default filename or choose a custom one if you don't have a need for a custom name you should leave the default one.
-
-Choose a strong password to protect your key and save it in your password manager.
+The most important thing to do is to choose a strong password to protect your key with (and save it in your [password][7] [manager][8]).
 
 #### Add the key to the SSH agent
 
+Once you have generated the key you need to add it to the agent to be able to use it.
+
 - Start the ssh-agent if it's not already running by typing `eval "$(ssh-agent -s)"` in your Terminal
-- Edit `~/.ssh/config` (for example by running `nano ~/.ssh/config`) and set up the SSH agent to automatically load keys on startup on top of allowing it to save passwords to the keychain so you don't have to type it every time:
+- Open and edit `~/.ssh/config`. The easiest way is by running `nano ~/.ssh/config`, but you can also use any app to do it. From there you can set up the SSH agent to automatically load keys on system startup so you don't have to go through this process again each time you reboot your system.
 
 ```
 Host *
@@ -30,29 +30,38 @@ Host *
   IdentityFile ~/.ssh/id_rsa
 ```
 
-- Finally, add the key to the agent by running `ssh-add -K ~/.ssh/id_rsa`
+- Finally you need to allow it to save the key password's to the system keychain so you don't have to type it every time. You can do that by running `ssh-add -K ~/.ssh/id_rsa` and typing your login password when prompted.
 
 <!-- ---- end part 10 ---- -->
 <!-- part 11 published 2019-05-06 -->
 
 #### Add the key to Github
 
-Now that you have generated a key and added it to the agent you can Log In to Github and add the key to your account.
+Now that you have generated a key and added it to the agent you can Log In to Github from any web browser and add the key to your account.
 
-- Log In to your Github Account
-- Go to "Settings" > "SSH and GPG keys"
-- Open your terminal and print your public key by running `cat ~/.ssh/id_rsa.pub`, copy the output
+- Log In to your Github Account.
+- Go to "Settings" > "SSH and GPG keys".
+- Open your terminal and print your public key by running `cat ~/.ssh/id_rsa.pub`, copy the output. Make sure to copy the `.pub` file and NOT the private key. You should never share the private key with anyone.
 - Go back to Github and click on "New SSH key"
-- Paste your PUBLIC key (you can also give it a title to remember the name of the device)
+- Paste your PUBLIC key in the field. You can also give it a name to remember the device it came from. If you're only using one device to connect to your Github account this may be superfluos, but if you plan on using multiple devices it will be easier in the future to remove a key from a device you're no longer using if you can figure out which machine it is by its name.
 
 #### Testing out the connection
 
-- Go back to your Terminal and run `ssh -T git@github.com`. Type yes when it prompts you to continue (if you want to check that you're really connecting to Github you can check the RSA fingerprint displayed in your terminal to the ones [provided by Github][5]).
-- If you see "You've successfully authenticated, but GitHub does not provide shell access." you've set up everything correctly, otherwise [check out Github's troubleshooting steps][6]
+The final step is to test our setup. We should now be able to connect to Github via SSH and be logged in.
 
-We're are not going to set up or push to a repository yet. We've set up the key not so that we don't have to go through the lengthy process of setting up a key once everything is ready. Next up is actually setting up the website with Jekyll.
+- Go back to your Terminal and run `ssh -T git@github.com`. Type yes when it prompts you to continue[^1].
+- If you see "You've successfully authenticated, but GitHub does not provide shell access." it means that you've set up everything correctly, otherwise [check out Github's troubleshooting steps][6] to figure out what went wrong. The most common cause is that you rebooted and did not save your password to the keychain, but the previous steps should have avoided that pityfall.
+
+We're are not going to set up or push to a repository yet. We've set up the key not so that we don't have to go through the lengthy process of setting up a key once everything is ready.
+
+Next up is actually setting up the website with Jekyll on our local machine.
 
 [3]: {% post_url 2019-03-14-ssh-key-windows %}
 [4]: https://help.github.com/en/enterprise/2.15/user/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent
 [5]: https://help.github.com/en/articles/testing-your-ssh-connection
 [6]: https://help.github.com/en/articles/error-permission-denied-publickey
+[7]: {% post_url Password-Manager %}
+[8]: {% post_url 2014-05-06-Do-you-have-a-password-manager %}
+
+
+[^1]: If you want to check that you're really connecting to Github you can check the RSA fingerprint displayed in your terminal to the ones [provided by Github][5].
